<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.upc.eseiaat.pma.guillemcomas.guillemcomas.MainActivity">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/dia" />

    <TextView
        android:id="@+id/txt_mes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_dia"
        android:layout_below="@+id/txt_dia"
        android:layout_marginTop="30dp"
        android:text="@string/mes" />

    <TextView
        android:id="@+id/txt_Any"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_mes"
        android:layout_below="@+id/txt_mes"
        android:layout_marginTop="35dp"
        android:text="@string/any" />

    <TextView
        android:id="@+id/txt_nomMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_numDia"
        android:layout_alignTop="@+id/txt_mes"
        android:hint="@string/exp_mes"
        android:textSize="20sp"
        tools:text="Maig" />

    <EditText
        android:id="@+id/txt_numDia"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_nomMes"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/txt_dia"
        android:ems="10"
        android:hint="@string/exp_dia"
        android:inputType="textPersonName"
        android:textSize="20sp"
        tools:text="12" />

    <EditText
        android:id="@+id/txt_numAny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_Any"
        android:layout_alignBottom="@+id/txt_Any"
        android:layout_alignEnd="@+id/btn_mes"
        android:layout_alignStart="@+id/txt_nomMes"
        android:ems="10"
        android:hint="@string/exp_any"
        android:inputType="textPersonName"
        android:text="2015" />

    <Button
        android:id="@+id/btn_resta1"
        android:layout_width="40dp"
        android:layout_height="?attr/listPreferredItemHeight"
        android:layout_marginStart="57dp"
        android:text="-1"
        android:layout_toEndOf="@+id/txt_numDia"
        android:layout_alignBottom="@+id/txt_numDia"
        android:layout_alignTop="@+id/txt_numDia" />

    <Button
        android:id="@+id/btn_suma1"
        android:layout_width="40dp"
        android:layout_height="?attr/listPreferredItemHeight"
        android:onClick="suma_1"
        android:text="+1"
        android:layout_toEndOf="@+id/btn_resta1"
        android:layout_alignBottom="@+id/btn_resta1"
        android:layout_alignTop="@+id/btn_resta1" />

    <Button
        android:id="@+id/btn_mes"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/btn_mes"
        android:layout_above="@+id/txt_numAny"
        android:layout_alignEnd="@+id/btn_suma1"
        android:layout_alignStart="@+id/btn_resta1" />

    <Button
        android:id="@+id/btn_avui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txt_Any"
        android:layout_marginBottom="28dp"
        android:text="@string/btn_avui" />

    <Button
        android:id="@+id/btn_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_avui"
        android:layout_alignEnd="@+id/btn_mes"
        android:text="TOAST" />
</RelativeLayout>
